--- a/src/ui/index.less
+++ b/src/ui/index.less
@@ -11,9 +11,11 @@
 :root {
   --bg-light-primary-color: #e0e0e0;
   --bg-light-secondary-color: #f5f5f5;
+  --bg-light-pure-color: #fff;
   --bg-light-glass-color: rgba(255, 255, 255, 0.5);
   --bg-dark-primary-color: #121212;
   --bg-dark-secondary-color: #1e1e1e;
+  --bg-dark-pure-color: #000;
   --bg-dark-glass-color: rgba(0, 0, 0, 0.5);
   --font-light-primary-color: #000000;
   --font-light-secondary-color: #565656;
@@ -26,6 +28,7 @@
 
   --bg-primary-color: var(--bg-light-primary-color);
   --bg-secondary-color: var(--bg-light-secondary-color);
+  --bg-pure-color: var(var(--bg-light-pure-color));
   --font-primary-color: var(--font-light-primary-color);
   --font-secondary-color: var(--font-light-secondary-color);
   --bg-glass-color: var(--bg-light-glass-color);
@@ -41,6 +44,7 @@
   :root {
     --bg-primary-color: var(--bg-dark-primary-color);
     --bg-secondary-color: var(--bg-dark-secondary-color);
+    --bg-pure-color: var(var(--bg-dark-pure-color));
     --font-primary-color: var(--font-dark-primary-color);
     --font-secondary-color: var(--font-dark-secondary-color);
     --bg-glass-color: var(--bg-dark-glass-color);
