test: test dist

--- a/src/ui/index.less
+++ b/src/ui/index.less
@@ -34,6 +34,7 @@
   --bg-glass-color: var(--bg-light-glass-color);
   --border-color: var(--border-light-color);
   --border-hover-color: var(--border-light-hover-color);
+  --el-message-bg-color: var(--bg-secondary-color);
 
   --traffic-light-radius: 6px;
   --traffic-light-size: 12px;
@@ -50,6 +51,7 @@
     --bg-glass-color: var(--bg-dark-glass-color);
     --border-color: var(--border-dark-color);
     --border-hover-color: var(--border-dark-hover-color);
+    --el-message-bg-color: var(--bg-secondary-color);
   }
 }
 
