upd: Refactor the project
- Add WebSocket event parameter types
- Refactored the streaming logic; the server now creates the streaming channel.
- Using socket.io-client's built-in heartbeat detection and automatic reconnection.
- Added a method to save configuration file fields.
- Update the login window.

--- a/src/ui/assets/css/el-dark.less
+++ b/src/ui/assets/css/el-dark.less
@@ -354,14 +354,14 @@
       .el-input__inner {
         background-color: var(--bg-primary-color);
         color: var(--font-primary-color);
-        border-color: rgba(255, 255, 255, 0.1);
+        border-color: var(--border-color);
       }
 
       .el-input-number__decrease,
       .el-input-number__increase {
         background-color: var(--bg-primary-color);
         color: var(--font-secondary-color);
-        border-color: rgba(255, 255, 255, 0.03);
+        border-color: var(--border-color);
 
         &:hover {
           color: var(--el-color-primary);
@@ -373,7 +373,7 @@
       .el-input__inner {
         background-color: var(--bg-primary-color);
         color: var(--font-primary-color);
-        border-color: rgba(255, 255, 255, 0.1);
+        border-color: var(--border-color);
       }
 
       .el-input__suffix {
