--- a/src/ui/index.less
+++ b/src/ui/index.less
@@ -57,7 +57,7 @@
 
 html {
   font-size: 16px;
-  background-color: var(--bg-primary-color);
+  // background-color: var(--bg-primary-color);
 }
 
 body {
