--- a/src/ui/index.less
+++ b/src/ui/index.less
@@ -52,26 +52,16 @@
 }
 
 html {
-  font-size: 16px;
-  // background-color: var(--bg-primary-color);
+  font-size: 13px; /* macOS 原生 UI 常见 */
+  line-height: 1.4; /* 比网页更紧凑 */
 }
 
 body {
   width: 100vw;
   min-height: 100vh;
   font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+    'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -85,5 +75,3 @@ a {
 #app {
   margin: 0 auto;
 }
-
-
